--- a/MagazaUrunMvc/Views/Shared/_AdminLayout.cshtml
+++ b/MagazaUrunMvc/Views/Shared/_AdminLayout.cshtml
@@ -23,13 +23,13 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Ürünler</a>
+                        <a class="nav-link" href="/Urun/Index/">Ürünler</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Müşteriler</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Kategoriler</a>
+                        <a class="nav-link" href="/Kategori/Index/">Kategoriler</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Satışlar</a>
