--- a/MagazaUrunMvc/Views/Shared/_AdminLayout.cshtml
+++ b/MagazaUrunMvc/Views/Shared/_AdminLayout.cshtml
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="/Urun/Index/">Ürünler</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Müşteriler</a>
+                        <a class="nav-link" href="/Musteri/Index/">Müşteriler</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/Kategori/Index/">Kategoriler</a>
