--- a/MagazaUrunMvc/Views/Urun/YeniUrun.cshtml
+++ b/MagazaUrunMvc/Views/Urun/YeniUrun.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 <form method="post">
-    <h2>Yeni Ürün Ekleme</h2>
+    <h2>Yeni Ürün</h2>
     <br />
     <label>Ürün Adı:</label>
     @Html.TextBoxFor(x => x.ad, new { @class = "form-control" })
