satis paneli yapildi

--- a/MagazaUrunMvc/Views/Shared/_AdminLayout.cshtml
+++ b/MagazaUrunMvc/Views/Shared/_AdminLayout.cshtml
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="/Kategori/Index/">Kategoriler</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Satışlar</a>
+                        <a class="nav-link" href="/Satislar/Index/">Satışlar</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Yardım</a>
