--- a/MagazaUrunMvc/Views/Shared/_AdminLayout.cshtml
+++ b/MagazaUrunMvc/Views/Shared/_AdminLayout.cshtml
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="#">Yardım</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Ayarlar</a>
+                        <a class="nav-link" href="/Admin/Index/">Yeni Admin</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Çıkış</a>
